// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - details reducer Should enable the loading 1`] = `
Object {
  "details": Object {},
  "loading": true,
  "postType": "tribe_events",
}
`;

exports[`[STORE] - details reducer Should set the details 1`] = `
Object {
  "details": Object {
    "title": "Modern Tribe",
  },
  "loading": false,
  "postType": "tribe_events",
}
`;

exports[`[STORE] - details reducer Should set the post type 1`] = `
Object {
  "details": Object {},
  "loading": false,
  "postType": "tribe_organizers",
}
`;
